:wheelchair: - style: fix problematic contrast of muted text on dark mode

--- a/src/style/tokens/dark.scss
+++ b/src/style/tokens/dark.scss
@@ -11,6 +11,7 @@
   --typography-color-body: #e3e5e8;
   --typography-color-border: #535353;
   --typography-color-h: #e3e5e8;
+  --typography-color-muted: #8c8c8c;
 
   --button-color-text-outline: #f3f3f3;
   --button-color-text-primary: #313741;
